--- a/templates/layout.html
+++ b/templates/layout.html
@@ -67,8 +67,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbar">
           <ul class="navbar-nav ms-auto mt-2">
-            <li class="nav-item px-2"><a class="nav-link" href="/bookmarks">Bookmarks</a></li>
-            <li class="nav-item px-2"><a class="nav-link" href="/settings">Settings</a></li>
+            <li class="nav-item px-2"><a class="nav-link" href="/bookmarks">Favoritos</a></li>
+            <li class="nav-item px-2"><a class="nav-link" href="/settings">Configuracion</a></li>
             <li class="nav-item px-2"><a class="nav-link" href="/logout">Log Out</a></li>
           </ul>
         </div>
