--- a/templates/login.html
+++ b/templates/login.html
@@ -32,8 +32,8 @@
                 <!-- Validation-->
                 <p id="validation" class="mb-3 small text-center fw-light text-muted">{{ message }}</p>
                 <!-- Register -->
-                <p class="small fw-normal text-center mb-0">Don't have an account? <a href="/register"
-                    class="fw-6">Register!</a></p>
+                <p class="small fw-normal text-center mb-0">No tienes una cuenta? <a href="/register"
+                    class="fw-6">Registrate!</a></p>
             </form>
         </div>
         
