--- a/templates/register.html
+++ b/templates/register.html
@@ -37,7 +37,7 @@
                 <!-- Validation -->
                 <p id="validation" class="mb-3 text-center small fw-light text-muted">{{ message }}</p>
                 <!-- Login -->
-                <p class="small text-center fw-normal mb-0">Already registered? <a href="/login"
+                <p class="small text-center fw-normal mb-0">Ya tienes una cuenta? <a href="/login"
                     class="fw-6">Log In!</a></p>
             </form>
         </div>
