--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,7 +8,7 @@
 
     <!-- Headline -->
     <div class="my-3 text-left">
-        <h5 class="ms-3">Update your account information.</h5>
+        <h5 class="ms-3">Actualzia tu informacion.</h5>
     </div>
 
     <!-- Contents -->
@@ -27,7 +27,7 @@
                         {% endif %}
                         role="tab" data-bs-toggle="tab"
                             data-bs-target="#name-left" aria-controls="name-left" aria-selected="true">
-                            Edit Name
+                            Cambiar nombre
                         </div>
                     </li>
                     <!-- Username Tab -->
