--- a/templates/result.html
+++ b/templates/result.html
@@ -24,10 +24,10 @@
         <!-- Handle error -->
         {% if not recipes_list %}
         <div class="text-center">
-            <div class="fs-1 fw-7 text-center mb-3">Sin resultados. <span class="noto">🙁</span></div>
+            <div class="fs-1 fw-7 text-center mb-3">Sin resultados.</div>
             <div class="fs-5">No tenemos recestas con tantos ingredientes .</div>
             <div class="fs-5 mb-5">Asegúrese de que no haya ningún error tipográfico en su consulta.</div>
-            <a href="/" class="fw-6 fs-4">Intentar de nuevo?</a>
+            <a href="/" class="fw-6 fs-4">Intentar de nuevo</a>
         </div>
         {% else %}
         <!-- Show result -->
