--- a/templates/layout.html
+++ b/templates/layout.html
@@ -26,8 +26,6 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./static/favicon/favicon-16x16.png">
     <link rel="manifest" href="./static/favicon/site.webmanifest">
 
-    <!-- Footer -->
-    <script src="https://developer.edamam.com/attribution/badge.js"></script>
 
     <!-- Noto Emoji -->
     <link href='https://fonts.googleapis.com/css?family=Noto Emoji' rel='stylesheet'>
@@ -39,7 +37,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- Page Title -->
-    <title>recifilter | {% block title %}{% endblock %}</title>
+    <title>HOMEchef | {% block title %}{% endblock %}</title>
   </head>
 
   <body>
@@ -49,7 +47,7 @@
       <!-- Title -->
       <div class="container py-3">
         <a href="/" class="navbar-brand">
-          <span class="playfair">recifilter</span><br>
+          <span class="playfair">HOMEchef</span><br>
         </a>
         <!-- Navigation -->
         {% if session["user_id"] %}
