--- a/templates/result.html
+++ b/templates/result.html
@@ -14,7 +14,7 @@
                 {% if readable_ingredients %}
                     containing {{ readable_ingredients }}
                 {% endif %}
-                that match your requirements:
+                Esto concuerda con tus ingredientes:
             </h5>
         </div>
     {% endif %}
