--- a/templates/settings.html
+++ b/templates/settings.html
@@ -8,7 +8,7 @@
 
     <!-- Headline -->
     <div class="my-3 text-left">
-        <h5 class="ms-3">Actualzia tu informacion.</h5>
+        <h5 class="ms-3">Actualiza tu informacion.</h5>
     </div>
 
     <!-- Contents -->
