--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -7,10 +7,10 @@
 }
 
 :root {
-    --green: #96a535;
-    --orange: #e16f29;
+    --green: #312a28;
+    --orange: #da835c;
     --yellow: #ebad39;
-    --beige: #ede3d3;
+    --beige: #746458;
     --black: #141402;
     --white: 245, 245, 245;
     --maintransition: all 0.3s linear;
